--- a/css/styles.css
+++ b/css/styles.css
@@ -7,19 +7,43 @@
 --main-txt-dark: #FFFFFF;
 --main-txt-light: #212121;
 --p-color: #757575;
-/* bg-color */
-
-/* other */
 }
+
 /* Header section */
 body {
     font-family: var(--main-font), "sans-serif";
-   
+}
+    /* reset */
+
+h1,
+h2,
+h3,
+p {
+    margin: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+   /* Container */
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+
+    
 }
 
 a {text-decoration: none;}
 
 .logo {
+    margin-right: 93px;
+
     font-style: normal;
     text-align: left;
     font-family: var(--secondary-font), "sans-serif";
@@ -27,20 +51,42 @@ a {text-decoration: none;}
     font-size: 26px;
     line-height: 1.19px;
     color: var(--accent-color);
+   
 }
 
 .span-studio {
     color: #000000;
 }
 
+.header-list {
+    display: flex;
+}
+
+.header-list-item:not(:last-child) {
+    margin-right: 50px;
+}
+
+.header-container {
+    display: flex;
+    align-items: center
+}
+
+.header-group {
+    margin-left: auto;
+    display: flex;
+}
 
 .header-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     font-weight: 500;
     text-align: center;
     font-size: 14px;
     line-height: 1.14;
     color: var(--main-txt-light);
-        }
+}
 
 .header-link:hover,
 .header-link:focus {
@@ -80,7 +126,10 @@ color: var(--p-color);
 }
 .header-contact {
 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+margin-left: 50px;
 }
+
+/* Portfolio-contact */
 .portfolio-contact {
     text-shadow: none;
 }
@@ -93,7 +142,17 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    background-color: #2F303A
 }
 
+.solutions-div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .title {
+    display: block;
+    padding-top: 200px;
+    padding-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -105,6 +164,8 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 /* Button */
 .btn {
+margin-bottom: 200px;
+
 font-family: inherit;
 font-weight: 700;
 font-size: 16px;
@@ -112,8 +173,11 @@ line-height: 1.88;
 display: flex;
 letter-spacing: 0.06em;
 color: var(--main-txt-dark);
-background-color:#188CE8;
+background-color: var(--accent-color);
 cursor: pointer;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 .btn:hover,
 .btn:focus {
@@ -121,7 +185,28 @@ cursor: pointer;
 }
 
 /* Деятельность WebStudio */
+
+/* Activities-list */
+.features-block {
+display: flex;
+}
+
+.universal-list {
+    display: flex;
+    padding: 0px;  
+}
+
+.list-card {
+    padding-right: 30px;
+    padding-top: 94px;
+    padding-bottom: 94px;
+   }
+.list-card:last-child {
+padding-right: 0px;
+}
+
 .article-title {
+    margin-bottom: 10px;
     font-family: var(--main-font), "sans-serif";
     font-weight: 700;
     font-size: 14px;
@@ -131,6 +216,29 @@ cursor: pointer;
     color: var(--main-txt-light);
 }
  /*  Команда WebStudio */
+
+.cards-team {
+display: flex;
+padding: 0px;
+margin: 0px;
+
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+
+}
+
+.team-list {
+    flex-basis: calc(100%/4-20px);
+    margin-right: 30px;
+    margin-top: 50px;
+    margin-bottom: 94px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+.team-list:last-child {
+    margin-right: 0px;
+}
+
 .featrers-text {
     font-family: var(--main-font), "sans-serif";
     font-weight: 400;
@@ -141,6 +249,8 @@ cursor: pointer;
 }
 
 .under-title {
+    margin-bottom: 50px;
+
     font-family: var(--main-font), "sans-serif";
     font-weight: 700;
     font-size: 36px;
@@ -150,7 +260,18 @@ cursor: pointer;
     color: var(--main-txt-light);
 }
 
+.img-list {
+margin-right: 30px;
+padding-bottom: 94px;
+}
+.img-list:last-child {
+    margin-right: 0px;
+}
+
 .under-title-list {
+    margin-top: 30px;
+    margin-bottom: 10px;
+       
     font-family: var(--main-font), "sans-serif";
     font-weight: 500;
     font-size: 16px;
@@ -159,7 +280,22 @@ cursor: pointer;
     color: var(--main-txt-light);
 }
 
+.name-one {
+    margin-left: 60px;
+}
+.name-two {
+    margin-left: 81px;
+}
+.name-three {
+    margin-left: 67px;
+}
+.name-four {
+    margin-left: 68px;
+}
+
 .job-title {
+    margin-bottom: 30px;
+
     font-family: var(--main-font), "sans-serif";
     font-weight: 400;
     font-size: 16px;
@@ -167,10 +303,26 @@ cursor: pointer;
     letter-spacing: 0.03em;
     color: var(--p-color);
 }
+.job-one {
+    margin-left: 70px;
+}
+.job-two {
+    margin-left: 62px;
+}
+.job-three {
+    margin-left: 97px;
+}
+.job-four {
+    margin-left: 92px;
+}
 
 /* Footer section */
 .footer {
     background-color: #2F303A;;
+}
+
+.logo-span {
+color: var(--main-txt-dark);
 }
 
 .address {
@@ -193,8 +345,31 @@ cursor: pointer;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
+
+.footer-content {
+    display: flex;
+    flex-direction: column;
+}
+.logo-footer {
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+.footer-list {
+    padding-left: 0px;
+}
+.address-list {
+    margin-bottom: 9px;
+}
+.address-list:last-child {
+    margin-bottom: 60px;
+}
  
   /* Portfolio-button */
+
+hr {
+    border: 1px solid #ECECEC;
+}
+
 .portfolio-btn {
     font-family: inherit;
     font-weight: 500;
@@ -222,6 +397,9 @@ cursor: pointer;
 
 
 .portfolio-title {
+    margin-top: 20px;
+    margin-left: 24px;
+    
     font-family: var(--main-font), "sans-serif";
     font-weight: 700;
     font-size: 18px;
@@ -231,10 +409,51 @@ cursor: pointer;
 }
 
 .portfolio-text {
+    margin-top: 4px;
+    margin-bottom: 20px;
+    margin-left: 24px;
+
     font-family: var(--main-font), "sans-serif";
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--p-color);
+}
+
+.list-contact {
+    margin-left: 50px;
+}
+
+.btn-box {
+    display: flex;
+    justify-content: center;  
+    padding-bottom: 34px;
+}
+
+.list-btn {
+display: flex;
+padding-top: 95px;
+}
+.btn-ptl:not(:first-child) {
+    padding-left: 8px;
+}
+/* img filters in Portfolio */
+.img-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 93px;
+}
+
+.img-box-list {
+    display: contents;
+
+}
+.card-img {
+    width: calc((100% - 30)/ 3);
+    border: 1px solid #EEEEEE;
+}
+.img-tech {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
