--- a/css/styles.css
+++ b/css/styles.css
@@ -452,6 +452,7 @@ padding-top: 95px;
 }
 .card-img {
     width: calc((100% - 30)/ 3);
+    margin-bottom: 30px;
     border: 1px solid #EEEEEE;
 }
 .img-tech {
