--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,11 @@ p {
     margin: 0;
 }
 
+ul {
+    padding: 0px;
+    margin: 0px;
+}
+
 img {
     display: block;
     max-width: 100%;
@@ -42,14 +47,11 @@ img {
 a {text-decoration: none;}
 
 .logo {
-    margin-right: 93px;
-
     font-style: normal;
-    text-align: left;
     font-family: var(--secondary-font), "sans-serif";
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19px;
+    line-height: 1.19;
     color: var(--accent-color);
    
 }
@@ -58,8 +60,11 @@ a {text-decoration: none;}
     color: #000000;
 }
 
+
+
 .header-list {
     display: flex;
+    padding-left: 93px;
 }
 
 .header-list-item:not(:last-child) {
@@ -139,7 +144,12 @@ margin-left: 50px;
 }
 /* Main content */
 .hero {
-   background-color: #2F303A
+   background-color: #2F303A;
+   padding-top: 200px;
+   padding-right: 0px;
+   padding-bottom: 200px;
+   padding-left: 0px;
+   
 }
 
 .solutions-div {
@@ -149,9 +159,8 @@ margin-left: 50px;
 }
 
 .title {
-    display: block;
-    padding-top: 200px;
-    padding-bottom: 30px;
+    
+    margin-bottom: 30px;
 
     font-weight: 900;
     font-size: 44px;
@@ -159,12 +168,15 @@ margin-left: 50px;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--main-txt-dark);
 }
 
 /* Button */
 .btn {
-margin-bottom: 200px;
+padding-top: 10px;
+padding-right: 32px;
+padding-bottom: 10px;
+padding-left: 32px;
 
 font-family: inherit;
 font-weight: 700;
@@ -187,6 +199,13 @@ border-radius: 4px;
 /* Деятельность WebStudio */
 
 /* Activities-list */
+.section-features {
+    padding-top: 94px;
+    padding-right: 0px;
+    padding-bottom: 94px;
+    padding-left: 0px;
+}
+
 .features-block {
 display: flex;
 }
@@ -197,9 +216,8 @@ display: flex;
 }
 
 .list-card {
-    padding-right: 30px;
-    padding-top: 94px;
-    padding-bottom: 94px;
+    margin-right: 30px;
+    
    }
 .list-card:last-child {
 padding-right: 0px;
@@ -215,7 +233,13 @@ padding-right: 0px;
     text-transform: uppercase;
     color: var(--main-txt-light);
 }
+
  /*  Команда WebStudio */
+
+ .section-team {
+    padding-top: 94px;
+    background: #F5F4FA;
+ }
 
 .cards-team {
 display: flex;
@@ -232,8 +256,10 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
     margin-right: 30px;
     margin-top: 50px;
     margin-bottom: 94px;
+
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    background-color: var(--main-txt-dark);
 }
 .team-list:last-child {
     margin-right: 0px;
@@ -246,6 +272,12 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--p-color);
+}
+
+/* Деятельность WebStudio */
+
+.section-activities {
+    padding-top: 0px;
 }
 
 .under-title {
@@ -269,9 +301,8 @@ padding-bottom: 94px;
 }
 
 .under-title-list {
-    margin-top: 30px;
     margin-bottom: 10px;
-       
+
     font-family: var(--main-font), "sans-serif";
     font-weight: 500;
     font-size: 16px;
@@ -280,21 +311,13 @@ padding-bottom: 94px;
     color: var(--main-txt-light);
 }
 
-.name-one {
-    margin-left: 60px;
-}
-.name-two {
-    margin-left: 81px;
-}
-.name-three {
-    margin-left: 67px;
-}
-.name-four {
-    margin-left: 68px;
+.job-team {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .job-title {
-    margin-bottom: 30px;
 
     font-family: var(--main-font), "sans-serif";
     font-weight: 400;
@@ -303,21 +326,14 @@ padding-bottom: 94px;
     letter-spacing: 0.03em;
     color: var(--p-color);
 }
-.job-one {
-    margin-left: 70px;
-}
-.job-two {
-    margin-left: 62px;
-}
-.job-three {
-    margin-left: 97px;
-}
-.job-four {
-    margin-left: 92px;
-}
 
 /* Footer section */
 .footer {
+padding-top: 60px;
+padding-bottom: 60px;
+padding-right: 0px;
+padding-left: 0px;
+
     background-color: #2F303A;;
 }
 
@@ -351,7 +367,6 @@ color: var(--main-txt-dark);
     flex-direction: column;
 }
 .logo-footer {
-    margin-top: 60px;
     margin-bottom: 20px;
 }
 .footer-list {
@@ -360,9 +375,7 @@ color: var(--main-txt-dark);
 .address-list {
     margin-bottom: 9px;
 }
-.address-list:last-child {
-    margin-bottom: 60px;
-}
+
  
   /* Portfolio-button */
 
@@ -371,6 +384,11 @@ hr {
 }
 
 .portfolio-btn {
+    padding-top: 6px;
+    padding-right: 22px;
+    padding-bottom: 6px;
+    padding-left: 22px;
+
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -380,7 +398,8 @@ hr {
     color: var(--main-txt-light);
     background-color: #F5F4FA;
     cursor: pointer;
-   
+    border: none;
+    border-radius: 4px;
 }
 
 .portfolio-btn:hover,
@@ -395,11 +414,16 @@ hr {
     background-color: var(--accent-color);
 }
 
+.box-title {
+    padding-top: 20px;
+    padding-right: 24px;
+    padding-bottom: 20px;
+    padding-left: 24px;
+}
 
 .portfolio-title {
-    margin-top: 20px;
-    margin-left: 24px;
-    
+    margin-bottom: 4px;
+
     font-family: var(--main-font), "sans-serif";
     font-weight: 700;
     font-size: 18px;
@@ -409,9 +433,6 @@ hr {
 }
 
 .portfolio-text {
-    margin-top: 4px;
-    margin-bottom: 20px;
-    margin-left: 24px;
 
     font-family: var(--main-font), "sans-serif";
     font-weight: 400;
@@ -425,6 +446,14 @@ hr {
     margin-left: 50px;
 }
 
+
+/* Btn-portfolio-section */
+
+.btn-section {
+    padding: 95px 0;
+
+}
+
 .btn-box {
     display: flex;
     justify-content: center;  
@@ -433,7 +462,6 @@ hr {
 
 .list-btn {
 display: flex;
-padding-top: 95px;
 }
 .btn-ptl:not(:first-child) {
     padding-left: 8px;
@@ -443,16 +471,14 @@ padding-top: 95px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 93px;
 }
 
 .img-box-list {
     display: contents;
-
 }
+
 .card-img {
-    width: calc((100% - 30)/ 3);
-    margin-bottom: 30px;
+    margin-top: 30px;
     border: 1px solid #EEEEEE;
 }
 .img-tech {
